fix: horizontal scroll crew table

--- a/src/client/modules/index/modules/index-subsection-crew/components/index-subsection-crew-table/index-subsection-crew-table.component.scss
+++ b/src/client/modules/index/modules/index-subsection-crew/components/index-subsection-crew-table/index-subsection-crew-table.component.scss
@@ -9,10 +9,12 @@
 
 .crew-table-container {
 	@extend %relative;
+	@extend %overflow-auto;
+	max-height: calc(100vh - 215px); // or calc(100vh - Xpx)
 }
 
 .crew-sticky-header {
-	top: 86px !important;
+	top: 0px !important;
 }
 
 .crew-icon {
