--- a/src/client/styles/molecule/properties.scss
+++ b/src/client/styles/molecule/properties.scss
@@ -4,6 +4,7 @@
     #{$c}opacity-1 { opacity: 1; }
     #{$c}overflow-hidden { overflow: hidden; }
     #{$c}overflow-visible { overflow: visible; }
+    #{$c}overflow-auto { overflow: auto; }
     #{$c}overflow-y-auto { overflow-y: auto; }
     #{$c}transparent-bg { background-color: transparent; }
     #{$c}invisible { visibility: hidden; }
